# vectorgraphicseditor

./: .gitignore  02_b_transform.sh  02_interaction.md  03_b_pen_tool.sh  03_bezier_paths.sh  04_layers_style.sh  HANDOVER.md  HANDOVER.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
markdown/: ARCHITECTURE.md  DATA_SCHEMA.md  ROADMAP_ULTIMATE.md  TECH_CONSTRAINTS.md
rust-core/: Cargo.toml
rust-core/src/: drag_state.rs  hit_test.rs  lib.rs  pen_state.rs  renderer.rs  text_engine.rs
rust-core/src/core/: math.rs  mod.rs  scene.rs
rust-core/src/spatial/: mod.rs  simple_index.rs
shellscript/: create_ultimate_roadmap.sh  restore_specs.sh
specs/: 02_b_transform.md  02_interaction.md  03_b_pen_tool.md  03_bezier_paths.md  04_layers_style.md  05_persistence.md  06_undo_redo.md  07_export_polish.md  08_path_editing.md  09_text_advanced.md  09_text_inline_edit.md
src/: App.tsx  main.tsx
src/components/: Canvas.tsx  DirectSelectOverlay.tsx  EditingOverlay.tsx  PropertiesPanel.tsx  Toolbar.tsx
src/store/: editorStore.ts
src/styles/: index.css
src/utils/: download.ts
src/wasm/: wasmLoader.ts
